--- a/style.css
+++ b/style.css
@@ -26,52 +26,79 @@ nav{
     grid-area: nav;
     display:flex;
     justify-content:center;
-    align-aitem:center;
+    align-aitems:center;
 }
 main{
     background: rgb(69, 247, 143);
     border: 2px solid white;
     grid-area: main;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #slide{
     background: rgb(68, 218, 68);
     border: 2px solid white;
     grid-area: slide;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #content1{
     background: rgb(9, 214, 94);
     border: 2px solid white;
     grid-area: content1;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #content2{
     background: rgb(9, 214, 94);
     border: 2px solid white;
     grid-area: content2;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #content3{
     background: rgb(9, 214, 94);
     border: 2px solid white;
     grid-area: content3;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #beforefooter1{
     background: rgb(11, 255, 113);
     border: 2px solid white;
     grid-area: beforefooter1;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #beforefooter2{
     background: rgb(11, 255, 113);
     border: 2px solid white;
     grid-area: beforefooter2;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #beforefooter3{
     background: rgb(11, 255, 113);
     border: 2px solid white;
     grid-area: beforefooter3;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 #footer{
     background: rgb(0, 49, 21);
     border: 2px solid white;
     grid-area: footer;
+    display:flex;
+    justify-content:center;
+    align-aitems:center;
 }
 @media screen and (max-width:576px) {
     .maincontainer{
