--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ nav{
     grid-area: nav;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 main{
     background: rgb(69, 247, 143);
@@ -34,7 +34,7 @@ main{
     grid-area: main;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 #slide{
     background: rgb(68, 218, 68);
@@ -42,7 +42,7 @@ main{
     grid-area: slide;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 #content1{
     background: rgb(9, 214, 94);
@@ -66,7 +66,7 @@ main{
     grid-area: content3;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 #beforefooter1{
     background: rgb(11, 255, 113);
@@ -74,7 +74,7 @@ main{
     grid-area: beforefooter1;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 #beforefooter2{
     background: rgb(11, 255, 113);
@@ -82,7 +82,7 @@ main{
     grid-area: beforefooter2;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 #beforefooter3{
     background: rgb(11, 255, 113);
@@ -90,7 +90,7 @@ main{
     grid-area: beforefooter3;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 #footer{
     background: rgb(0, 49, 21);
@@ -98,7 +98,7 @@ main{
     grid-area: footer;
     display:flex;
     justify-content:center;
-    align-aitems:center;
+    align-items:center;
 }
 @media screen and (max-width:576px) {
     .maincontainer{
